# sktm

./: .gitignore  .travis.yml  MANIFEST.in  README  README.md  example-project.yaml  requirements.txt  setup.cfg  setup.py  sktm.py  test-requirements.txt  tox.ini
db_migrations/: 01-drop-patchtest.sql  02-remove-seriesid.sql
sktm/: __init__.py  db.py  executable.py  jenkins.py  misc.py  patchwork.py  reporter.py
templates/: report.footer  report.header
tests/: test_db.py  test_init.py  test_misc.py  test_patchwork.py  test_reporter.py
