[metadata]
name = sktm
description = "Sonic Kernel Testing Manager"
long_description = file: README.md
version = 1
author = Red Hat, Inc.
license = GPLv2+

[options]
# Automatically find all files beneath the sktm directory and include them.
packages = find:
# Parse the MANIFEST.in file and include those files, too.
include_package_data = True

install_requires = flake8
                   dateutils
                   enum34
                   jenkinsapi
                   junit_xml
                   requests
                   pylint
                   mock

[options.entry_points]
console_scripts =
    sktm = sktm.executable:main

[options.packages.find]
# Don't include the /tests directory when we search for python files.
exclude =
    tests
